--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
               </div>
               <div class="desktop-menu-dropdown collapse navbar-collapse">
                 <form action="/" style="display: inline-flex;">
-                  <input type="text" placeholder="Search here.." class="search-loan" id="search-loan" name="search">
+                  <input type="text" placeholder="Search here.." autocomplete="off" class="search-loan" id="search-loan" name="search">
                   <i class="fa fa-search loan-search-ico"></i>
                 </form>
               </div>
