--- a/app/views/home/profile.html.erb
+++ b/app/views/home/profile.html.erb
@@ -1,38 +1,43 @@
 <section class="personal-loan-section custom-container">
   <div class="container">
     <div class="col-md-6 p-container profile-container text-center">
-      <h4>Welcome to Growwcapital <%= current_user&.full_name %></h4>
+      <h4>Welcome to Growwcapital<br><b><%= current_user&.full_name.titleize %></b></h4>
       <table class="table">
         <tr>
           <td colspan="2">
-            <%= image_tag "default-img.jpg", class: "default-img" %>
+            <%if current_user.profile_image.attachment.blank? %>
+              <%= image_tag "default-img.jpg", class: "default-img" %>
+            <%else%>
+              <%= image_tag "#{url_for(current_user.profile_image)}", class: "default-img" %>
+            <%end%>
           </td>          
         </tr>
         <tr>
-          <td>First Name</td>
-          <td><%= current_user&.first_name %></td>
+          <td align="right">First Name</td>
+          <td align="left"><%= current_user&.first_name %></td>
         </tr>
         <tr>
-          <td>Last Name</td>
-          <td><%= current_user&.last_name %></td>
+          <td align="right">Last Name</td>
+          <td align="left"><%= current_user&.last_name %></td>
         </tr>
         <tr>
-          <td>Mobile Number</td>
-          <td><%= current_user&.mobile_number %></td>
+          <td align="right">Mobile Number</td>
+          <td align="left"><%= current_user&.mobile_number %></td>
         </tr>
         <tr>
-          <td>Address</td>
-          <td><%= current_user&.full_address %></td>
+          <td align="right">Address</td>
+          <td align="left"><%= current_user&.full_address %></td>
         </tr>
         <tr>
-          <td>Profession</td>
-          <td><%= current_user&.profession %></td>
+          <td align="right">Profession</td>
+          <td align="left"><%= current_user&.profession %></td>
         </tr>
         <tr>
-          <td>Email</td>
-          <td><%= current_user&.email %></td>
+          <td align="right">Email</td>
+          <td align="left"><%= current_user&.email %></td>
         </tr>
       </table>
+      <%= link_to "Edit Profile", edit_user_registration_path, align: "right" %>
     </div>
   </div>
 </section>
