--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -94,8 +94,7 @@
     padding: 16px 0;
   }
   a:hover {
-    box-shadow: 0 4px 6px 0 rgba(36,39,44,.1);
-    border: 1px solid #ddd;
+    box-shadow: 1px 4px 6px 6px rgba(36, 39, 44, 0.1);
   }
   img {
     width: 80px;  
