--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -330,7 +330,7 @@
             <div class="col-md-9">
               <div class="row row1">
                 <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
-                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                  <a title="Used cars in  Ahmedabad" href="javascript:void(0)">
                     <span class="iconHolder">
                       <%= image_tag "cities/nagpur.svg", "data-lazy": "true", class: "imageTransition active", alt: "Nagpur" %>
                     </span>
@@ -338,7 +338,7 @@
                   </a>
                 </div>
                 <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
-                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                  <a title="Used cars in  Ahmedabad" href="javascript:void(0)">
                     <span class="iconHolder">
                       <%= image_tag "cities/mumbai.svg", "data-lazy": "true", class: "imageTransition active", alt: "Nagpur" %>
                     </span>
@@ -346,7 +346,7 @@
                   </a>
                 </div>
                 <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
-                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                  <a title="Used cars in  Ahmedabad" href="javascript:void(0)">
                     <span class="iconHolder">
                       <%= image_tag "cities/indoor.svg", "data-lazy": "true", class: "imageTransition active", alt: "Nagpur" %>
                     </span>
@@ -354,7 +354,7 @@
                   </a>
                 </div>
                 <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
-                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                  <a title="Used cars in  Ahmedabad" href="javascript:void(0)">
                     <span class="iconHolder">
                       <%= image_tag "cities/kolkata.svg", "data-lazy": "true", class: "imageTransition active", alt: "Nagpur" %>
                     </span>
@@ -362,7 +362,7 @@
                   </a>
                 </div>
                 <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
-                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                  <a title="Used cars in  Ahmedabad" href="javascript:void(0)">
                     <span class="iconHolder">
                       <%= image_tag "cities/hydrabad.svg", "data-lazy": "true", class: "imageTransition active", alt: "Nagpur" %>
                     </span>
@@ -370,7 +370,7 @@
                   </a>
                 </div>
                 <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
-                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                  <a title="Used cars in  Ahmedabad" href="javascript:void(0)">
                     <span class="iconHolder">
                       <%= image_tag "cities/pune.svg", "data-lazy": "true", class: "imageTransition active", alt: "Nagpur" %>
                     </span>
@@ -380,7 +380,7 @@
               </div>
               <div class="row">
                 <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
-                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                  <a title="Used cars in  Ahmedabad" href="javascript:void(0)">
                     <span class="iconHolder">
                       <%= image_tag "cities/ahmdabad.svg", "data-lazy": "true", class: "imageTransition active", alt: "Nagpur" %>
                     </span>
@@ -388,7 +388,7 @@
                   </a>
                 </div>
                 <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
-                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                  <a title="Used cars in  Ahmedabad" href="javascript:void(0)">
                     <span class="iconHolder">
                       <%= image_tag "cities/banglore.svg", "data-lazy": "true", class: "imageTransition active", alt: "Nagpur" %>
                     </span>
@@ -396,7 +396,7 @@
                   </a>
                 </div>
                 <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
-                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                  <a title="Used cars in  Ahmedabad" href="javascript:void(0)">
                     <span class="iconHolder">
                       <%= image_tag "cities/chennai.svg", "data-lazy": "true", class: "imageTransition active", alt: "Nagpur" %>
                     </span>
@@ -404,7 +404,7 @@
                   </a>
                 </div>
                 <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
-                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                  <a title="Used cars in  Ahmedabad" href="javascript:void(0)">
                     <span class="iconHolder">
                       <%= image_tag "cities/delhi.svg", "data-lazy": "true", class: "imageTransition active", alt: "Nagpur" %>
                     </span>
@@ -412,7 +412,7 @@
                   </a>
                 </div>
                 <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
-                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                  <a title="Used cars in  Ahmedabad" href="javascript:void(0)">
                     <span class="iconHolder">
                       <%= image_tag "cities/nashik.svg", "data-lazy": "true", class: "imageTransition active", alt: "Nagpur" %>
                     </span>
@@ -420,7 +420,7 @@
                   </a>
                 </div>
                 <div class="col-md-3 col-sm-4 col-lg-2 col-xl-2 ord-10 col-md-prd">
-                  <a title="Used cars in  Ahmedabad" href="/used-cars+in+ahmedabad">
+                  <a title="Used cars in  Ahmedabad" href="javascript:void(0)">
                     <span class="iconHolder">
                       <%= image_tag "cities/raipur.svg", "data-lazy": "true", class: "imageTransition active", alt: "Nagpur" %>
                     </span>
