--- a/app/views/home/blog.html.erb
+++ b/app/views/home/blog.html.erb
@@ -1,18 +1,4 @@
-<section id="secondary-banner" class="dynamic-image-5">
-  <div class="container">
-    <div class="row align-items-end">
-      <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-        <h2>Blog</h2>
-        <h4>Blog</h4>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-        <ul class="breadcrumb">
-          <li><a href="#">Home</a></li>
-          <li>Blog</li>
-        </ul>
-      </div>
-    </div>
-  </div>
+<section id="blog-banner">
 </section>
 <section class="content">
   <div class="container">
