--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="container p-container">
       <div class="row regist-div">
         <div class="col-md-5">
-          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          <%= image_tag "registration.jpg" %>
         </div>
         <div class="col-md-7">
           <div class="row">
