(fixed) updated the images.

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -73,45 +73,45 @@
 }
 
 #pre-apv-banner {
-  background-image: url(./pre-approved.jpg);
+  background-image: url(./pre-approved.png);
   height: 470px;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   margin-top: 50px;
   width: 100%;
 }
 
 #abt-us-banner {
-  background-image: url(./about-us.jpg);
+  background-image: url(./about-us.png);
   height: 470px;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   margin-top: 50px;
   width: 100%;
 }
 
 #emi-calc-banner {
-  background-image: url(./emi-calculator.jpg);
+  background-image: url(./emi-calculator.png);
   height: 470px;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   margin-top: 50px;
   width: 100%;
 }
 
 #blog-banner {
-  background-image: url(./blog.jpg);
+  background-image: url(./blog.png);
   height: 470px;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   margin-top: 50px;
   width: 100%;
 }
 
 #cont-us-banner {
-  background-image: url(./contact-us.jpg);
+  background-image: url(./contact-us.png);
   height: 470px;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   margin-top: 50px;
   width: 100%;
