--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,7 +3,7 @@
     <div class="container p-container">
       <div class="row regist-div">
         <div class="col-md-5">
-          <%= image_tag "registration.jpg" %>
+          <%= image_tag "registration.png" %>
         </div>
         <div class="col-md-7">
           <div class="row">
@@ -56,7 +56,7 @@
               </div>
             </div>
             <div class="col-md-6 text-right">
-              <%= link_to "Log in", new_session_path(resource_name) %>
+              <%= link_to "Sign In", new_session_path(resource_name) %>
             </div>
           </div>
         </div>
