--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -86,7 +86,7 @@
 <section class="banner-wrap">
   <div id="carosel-home-desk" class="owl-carousel">
     <div class="carosel-imgs img1"><%= image_tag "carosel/desktop/credit-card-banner.png", alt: "" %></div>
-    <div class="carosel-imgs img2"><%= image_tag "carosel/desktop/home-loan-banner.svg", alt: "" %></div>
+    <div class="carosel-imgs img2"><%= image_tag "carosel/desktop/home-loan-banner.png", alt: "" %></div>
     <div class="carosel-imgs img3"><%= image_tag "carosel/desktop/personal-loan-banner.png", alt: "" %></div>
   </div>
   <div id="carosel-home-mob" class="owl-carousel">
