--- a/app/views/home/emi_calculator.html.erb
+++ b/app/views/home/emi_calculator.html.erb
@@ -1,6 +1,6 @@
 <section id="emi-calc-banner">
 </section>
-<section class="personal-loan-section custom-container">
+<section class="emi-calcul">
   <div class="container p-container">
     <div class="row row1">
       <div class="col-md-6">
