--- a/app/views/home/pre_approved.html.erb
+++ b/app/views/home/pre_approved.html.erb
@@ -1,13 +1,7 @@
 <section id="pre-apv-banner">
-  <!-- <div class="container cnt-pre-apv-banner">
-    <div class="row align-items-end">
-      <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-
-      </div>
-    </div>
-  </div> -->
 </section>
-<section class="personal-loan-section custom-container">
+<br>
+<section class="personal-loan-section">
   <div class="container p-container">
     <%= form_for @pre_approved_offer, :url => { :action => "pre_approved_offer" }, remote: true, html: { id:  "pre_approved_offer", class: "pre_approved_offer" } do |f| %>
       <div class="container">
