--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,7 +3,7 @@
     <div class="container p-container">
       <div class="row regist-div">
         <div class="col-md-5">
-          <%= image_tag "registration.png" %>
+          <%= image_tag "signin.png" %>
         </div>
         <div class="col-md-7">
           <div class="row">
