--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -87,15 +87,14 @@
   <div id="carosel-home-desk" class="owl-carousel">
     <div class="carosel-imgs img1"><%= image_tag "carosel/desktop/credit-card-banner.png", alt: "" %></div>
     <div class="carosel-imgs img2"><%= image_tag "carosel/desktop/home-loan-banner.png", alt: "" %></div>
-    <div class="carosel-imgs img3"><%= image_tag "carosel/desktop/personal-loan-banner.png", alt: "" %></div>
+    <!-- <div class="carosel-imgs img3"><%#= image_tag "carosel/desktop/personal-loan-banner.png", alt: "" %></div> -->
   </div>
   <div id="carosel-home-mob" class="owl-carousel">
     <div class="carosel-imgs img1"><%= image_tag "carosel/mobile/credit-card-banner.png", alt: "" %></div>
     <div class="carosel-imgs img2"><%= image_tag "carosel/mobile/home-loan-banner.svg", alt: "" %></div>
-    <div class="carosel-imgs img3"><%= image_tag "carosel/mobile/personal-loan-banner.png", alt: "" %></div>
+    <!-- <div class="carosel-imgs img3"><%#= image_tag "carosel/mobile/personal-loan-banner.png", alt: "" %></div> -->
   </div>
 </section>
-
 <section class="content">
   <div class="container">
     <div class="inner-page homepage margin-bottom-none">
@@ -278,7 +277,8 @@
                 <div class="pb-feature">
                   <span class="top-line"></span>
                   <h3>Why Choose GrowwCapital?</h3>
-                  <a href="/about_us" data-ga-label="contentAboutPaisabazaar" class="read-more-btn">Read More</a>
+                  <%= image_tag "why-choose-us.png", alt: "" %>
+                  <!-- <a href="/about_us" data-ga-label="contentAboutPaisabazaar" class="read-more-btn">Read More</a> -->
                 </div>
             </div>
             <div class="col-md-7">
