--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -33,7 +33,7 @@
 }
 
 .pb-feature-section .pb-feature {
-  margin-bottom: 60px;
+  //margin-bottom: 60px;
 }
 
 .pb-feature .top-line, .top-line {
@@ -68,7 +68,7 @@
 }
 
 .pb-feature-section .pb-feature {
-  margin-bottom: 60px;
+  //margin-bottom: 60px;
 }
 
 .pb-feature img {
