(Fixed) images added.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -32,6 +32,14 @@
   background-color: #ebf3fa;
 }
 
+.pb-happ-section {
+  margin-top: 50px;
+  box-shadow: 0 2px 4px 0 #052f5f0a, 0 12px 16px 0 #bae8cf99;
+  padding-top: 20px;
+  border-radius: 10px;
+  background-color: #ebf3fa;
+}
+
 .pb-feature-section .pb-feature {
   //margin-bottom: 60px;
 }
