--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -440,7 +440,19 @@
           </div>
         </div>
       </section>
-
+      <br>
+      <section class="pb-happ-section">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 text-center">
+              <%= image_tag "dis-amount.png" %>
+            </div>
+            <div class="col-md-6 text-center">
+              <%= image_tag "happy-customer.png" %>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <div class="row">
         <h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
