(Fixed) added thank you page.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -106,7 +106,7 @@
       <section class="car-block-wrap padding-loans">
         <div class="row">
           <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
-            <%= link_to credit_card_path('step1'), method: :get do %>
+            <%= link_to custom_credit_card_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Credit Card</h1>
                 <p class="product-desc">Check, track &amp; build your credit score for best loan &amp; card offers</p>
@@ -117,7 +117,7 @@
             <%end%>
           </div>
           <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
-            <%= link_to personal_loan_path('step1'), method: :get do %>
+            <%= link_to custom_personal_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Personal Loan</h1>
                 <p class="product-desc">Check, track &amp; build your credit score for best loan &amp; card offers</p>
@@ -128,7 +128,7 @@
             <%end%>
           </div>
           <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
-            <%= link_to transfer_personal_loan_path('step1'), method: :get do %>
+            <%= link_to custom_transfer_personal_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Transfer Personal Loan</h1>
                 <p class="product-desc">Check, track &amp; build your credit scors</p>
@@ -139,7 +139,7 @@
             <%end%>
           </div>
           <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
-            <%= link_to business_loan_path('step1'), method: :get do %>
+            <%= link_to custom_business_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Business Loan</h1>
                 <p class="product-desc">Check, track &amp; build your credit score for best loan &amp; card offers</p>
