--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -18,7 +18,6 @@
   display: none;
 }
 
-
 .pb-feature-section {
 	margin-top: 50px;
   box-shadow: 0 2px 4px 0 #052f5f0a, 0 12px 16px 0 #bae8cf99;
@@ -127,6 +126,59 @@
   p {
     font-size: 16px;
   }
+}
+
+.custom-application {
+  padding-top: 10px;
+  border-bottom: 2px solid #d5d5d7;
+  .col-md-7 {
+    margin: 0 auto;
+  }
+  input, select {
+    border-radius: 5px;
+    border: 1px solid #2f4c44;
+    height: 40px !important;
+  }
+  label {
+    font-size: 20px;
+  }
+  p {
+    font-size: 20px;
+    font-weight: lighter;
+  }
+}
+
+.credit-card-banks {
+  display: flex;
+  margin-left: 40px;
+  p {
+    margin: 0px 10px 0px 10px;
+  }
+}
+
+.application-description {
+  .col-md-7 {
+    margin: 0 auto;
+    text-align: justify;
+    text-justify: inter-word;
+    .pl-ser {
+      font-weight: bold;
+    }
+  }
+  p {
+    font-size: 16px;
+  }
+}
+
+.other-services {
+  a {
+    background: #dfd8e5;
+    padding: 10px;
+    border-radius: 5px;
+    margin-right: 20px;
+  }
+  margin-bottom: 100px;
+  text-align: center;
 }
 
 @media(max-width: 575px) {
