(Fixed) crd page changes.

--- a/app/assets/stylesheets/credit_card.scss
+++ b/app/assets/stylesheets/credit_card.scss
@@ -30,3 +30,13 @@
 .file-hr {
   margin-top: 0px;
 }
+
+.crd-heading {
+  padding: 100px 50px 50px 50px;
+  text-align: justify;
+  color: #7b7676;
+  span {
+    color: #0954a0;
+    font-weight: 00;
+  }
+}
