--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -154,6 +154,9 @@
   p {
     margin: 0px 10px 0px 10px;
   }
+  .crd-img-effect {
+    height: 100px;
+  }
 }
 
 .application-description {
@@ -167,6 +170,25 @@
   }
   p {
     font-size: 16px;
+  }
+}
+
+.thank-you {
+  margin: 0 auto;
+  border: 1px solid rgba(235, 239, 247, 0.8);
+  box-shadow: 0 2px 4px 0 #052f5f0a, 0 12px 16px 0 #3469cb1f;
+  padding: 40px;
+  .thx-other-services {
+    a {
+      color: #0000ff;
+      font-weight: 500;
+      background-color: #fff;
+      border-radius: 8px;
+      border: 1px solid #ebeff7cc;
+      box-shadow: 0 2px 4px 0 #052f5f0a, 0 12px 16px 0 #3469cb1f;
+      padding: 15px;
+      margin-right: 15px;
+    }
   }
 }
 
