--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -252,10 +252,11 @@
       </section>
       <div class="homeStrip">
         <div class="container">
-          <p>It has been brought to our notice that fraudsters are using growwcapital’s identity to send erroneous communication to dupe people.<br>
-              In case you get such communication<span>... <a class="view-more-btn" href="javascript:void(0);">View More</a></span></p>
           <div class="do-dont">
-            <div>
+            <br>
+            <br>
+            <br>
+            <!-- <div>
               <ul>
                 <li><i class="fa fa-times-circle"></i><p>Don’t click on any link</p></li>
                 <li><i class="fa fa-times-circle"></i><p>Don’t share any information, especially sensitive data like account number, OTP etc.</p></li>
@@ -266,7 +267,7 @@
                 <li><i class="fa fa-check-circle"></i><p>Delete the communication immediately</p></li>
                 <li><i class="fa fa-check-circle"></i><p>Inform us at <a href="mailto:support@growwcapital.com">support@growwcapital.com</a> or 8806 644 344</p></li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -287,28 +288,28 @@
                   <div class="pb-feature">
                       <img src="https://www.paisabazaar.com//PBHP/assets/images/credible.svg" data-src="PBHP/assets/images/credible.svg" alt="credible">
                       <h3>Wide Choice</h3>
-                      <p>We work with 130+ partners, including India’s largest banks, NBFCs and Fintechs, to offer you over 500 financial products</p>
+                      <p><br><br></p>
                   </div>
                 </div>
                 <div class="col-sm-6">
                   <div class="pb-feature">
                       <img src="https://www.paisabazaar.com//PBHP/assets/images/trustworthy.svg" data-src="PBHP/assets/images/trustworthy.svg" alt="trustworthy">
                       <h3>Highly Trusted</h3>
-                      <p>Since our inception in 2014, we have earned the trust and goodwill of over 22 million happy customers</p>
+                      <p><br><br></p>
                   </div>
                 </div>
                 <div class="col-sm-6">
                   <div class="pb-feature">
                       <img src="https://www.paisabazaar.com//PBHP/assets/images/secure.svg" data-src="PBHP/assets/images/secure.svg" alt="secure">
                       <h3>Safe &amp; Secure</h3>
-                      <p>Your data is completely safe with us. We are ISO(27001: 2013) certified &amp; have built industry-best controls to keep your information secure.</p>
+                      <p><br><br></p>
                   </div>
                 </div>
                 <div class="col-sm-6">
                   <div class="pb-feature">
                       <img src="https://www.paisabazaar.com//PBHP/assets/images/helpful.svg" data-src="PBHP/assets/images/helpful.svg" alt="helpful">
                       <h3>Customer First</h3>
-                      <p>We have a dedicated and highly trained team of experts who work hard every day to help you take the best financial decisions</p>
+                      <p><br><br></p>
                   </div>
                 </div>
               </div>
