(Fixed) crd changes.

--- a/app/assets/stylesheets/credit_card.scss
+++ b/app/assets/stylesheets/credit_card.scss
@@ -32,11 +32,12 @@
 }
 
 .crd-heading {
-  padding: 100px 50px 50px 50px;
+  padding: 90px 50px 50px 50px;
   text-align: justify;
-  color: #7b7676;
+  color: #b8b7b7;
+  font-size: 26px;
   span {
-    color: #0954a0;
-    font-weight: 00;
+    color:  #1b1dc7;
+    font-weight: 600;
   }
 }
