--- a/app/views/home/credit_card.html.erb
+++ b/app/views/home/credit_card.html.erb
@@ -2,7 +2,7 @@
   <div class="container  custom-container">
     <div class="row">
       <div class="col-md-12">
-        <h3 class="text-center">Planning to apply for a credit card but feeling confused with so much choice?</h3>
+        <h3 class="text-center card-title">Planning to apply for a credit card but feeling confused with so much choice?</h3>
       </div>
     </div>
   </div>
