--- a/app/views/home/thank_you.html.erb
+++ b/app/views/home/thank_you.html.erb
@@ -4,8 +4,8 @@
       <div class="col-md-10 text-center thank-you">
         <h1 class="text-center">Thank You!</h1><br>
         <%= image_tag "right.png", alt: "right", style: "width: 15%;" %><br><br>
-        <h5>We thank you for submitting the details. We'll depute a Relationship Manager at your service.<br>He will get back to you within 24 hours or less to take the discussion forward.<br>Assuring you of our best and prompt services.</h5>
-        <h5><a href="/contact_us">Contact Us</a> | <a href="tel:+918806644344">+91-88066-44344</a></h5>
+        <h5>We thank you for submitting the details. We'll depute a Relationship Manager at your service, <br>he will get back to you within 24 hours or less to take the discussion forward.<br>Assuring you of our best and prompt services.</h5>
+        <h5>For any queries <a href="/contact_us">Contact Us</a> | <a href="tel:+918806644344">+91-88066-44344</a></h5>
         <h5><p class="text-center"><span>Click on this link to apply directly online.</span> <%= link_to "Apply", credit_card_path('step1'), method: :get, class: "btn btn-custom", style: "color: #fff" %></p></h5>
         <br>
         <h5 class="thx-other-services">
