--- a/app/views/home/credit_card.html.erb
+++ b/app/views/home/credit_card.html.erb
@@ -52,19 +52,18 @@
   <div class="row">
     <div class="col-md-12">
       <br>
-      <p>We deal in over 20+ credit cards of the most reputed banks, viz. HDFC credit cards, IDFC best offers, American Express credit card among others. We can help you get a credit card that best suits your requirements without stepping out of your premise. </p>
       <p>Whether you need the credit card for international holidays, business travel, spouse or Child, or for online shopping that offers maximum reward point advantages, we have the best solutions!</p>
       <p class="pl-ser">Our personalized service comes at no extra cost!</p>
       <p>If you want to apply for a credit card, we assign an executive exclusive for you to provide all the front-end & back-end support you may need now and then. He’ll visit you to share info, collect and complete formalities and documentation process and later on he’ll  track you credit card delivery to ensure it is delivered on time.</p>
       <p>He’ll give you all the info you may need, e.g. getting a card against card, reward point advantages on online shopping, interest rate on purchases (EMI), and minimum salary for card eligibility, and more.  He’ll help you compare the cards to see what works best for your lifestyle and spending habits, and check your eligibility without affecting credit score!</p>
-      <p><strong>Know the Features</strong></p>
+      <p class="pl-ser"><strong>Know the Features</strong></p>
       <p>Once you’ve shortlisted a credit card, we’ll initiate documentation process, share info on the type of bank account you need, card limit, info about benefits & reward points, annual fee, services under free credit card and premium card, your obligations to government, surcharges, etc.</p>
-      <p><strong>Check Credit Score</strong></p>
+      <p class="pl-ser"><strong>Check Credit Score</strong></p>
       <p>Apart from this, we can also help you with credit score, as no credit card company will approve your application without a good credit score.</p>
-      <p><strong>Credit Card EMI Calculator</strong></p>
+      <p class="pl-ser"><strong>Credit Card EMI Calculator</strong></p>
       <p>Credit Card <a href="/emi_calculator">EMI Calculator</a> is a free tool, which as the name suggests helps credit card holder to calculate monthly repayment schedule if he wants to pay his dues in installments and number two the credit card holder can know the exact interest charges he will be paying if he decides to pay in EMI. This tool offers a break-up of amount to give you a clear idea about what will you be paying towards principal and interest. You can opt for EMIs for amounts ranging from INR 2500 to INR 5 lakh.</p>
       <p>We’re here to answer all your questions and more. Give us a call on <a href="tel:+918806644344">+91-88066-44344</a></p>
-      <p><strong>Our other services:</strong></p>
+      <p class="pl-ser"><strong>Checkout our other services:</strong></p>
     </div>
   </div>
   <div class="row">
